fix: set scrollbar background-color

--- a/src/app/features/messages/components/msg-thread/msg-thread.component.css
+++ b/src/app/features/messages/components/msg-thread/msg-thread.component.css
@@ -47,7 +47,7 @@ app-msg-writer {
 }
 
 ::-webkit-scrollbar-track{
-    border-radius: 200px;
+    background-color: var(--background);
 }
 
 ::-webkit-scrollbar-thumb {
